# magent

./: .gitmodules  CMakeLists.txt  chunk_pool.cpp  chunk_pool.hpp  data_getter.hpp  dynamic_bitset.hpp  extension.hpp  extloader.cpp  extloader.hpp  head_getter.hpp  main.cpp  test.sh  tube_head_getter.cpp  tube_head_getter.hpp  tube_utils.cpp  tube_utils.hpp
doc/: .arch.dot.swp  arch.dot  techreport.md
extension/generic/: getters.cpp
extension/tube/: tube_data_getter.cpp  tube_data_getter.hpp  tube_head_getter.cpp  tube_head_getter.hpp  tube_utils.cpp  tube_utils.hpp
tests/: CMakeLists.txt  extloader.cpp  tube.tag  tube_head_getter.cpp
